<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <ProgressBar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_digit_tve"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        tools:text="No connection please check"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/display_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:id="@+id/container_scheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_error"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scheme_network_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:text="@string/scheme_network"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/scheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            tools:text="Visa" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/type_container"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/container_scheme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/container_scheme"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/type_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/debit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:text="@string/debit"
                app:layout_constraintLeft_toLeftOf="@id/type_header"
                app:layout_constraintTop_toBottomOf="@id/type_header" />

            <TextView
                android:id="@+id/type_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:text=" / "
                app:layout_constraintLeft_toRightOf="@id/debit"
                app:layout_constraintTop_toTopOf="@id/debit"
                app:layout_constraintBottom_toBottomOf="@id/debit"/>

            <TextView
                android:id="@+id/credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:text="@string/credit"
                app:layout_constraintLeft_toRightOf="@id/type_divider"
                app:layout_constraintTop_toTopOf="@id/type_divider"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="40dp"
        android:id="@+id/container_brand"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_scheme"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/brand_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:text="@string/brand"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            tools:text="Visa/Dankort" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container_prepaid"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/type_container"
        app:layout_constraintTop_toTopOf="@id/container_brand"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prepaid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prepaid"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:text="@string/yes" />

            <TextView
                android:id="@+id/prepaid_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:text=" / " />

            <TextView
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:text="@string/no" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_card_number"
        app:layout_constraintTop_toBottomOf="@id/container_brand"
        app:layout_constraintLeft_toLeftOf="@id/container_brand"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/card_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:textAllCaps="true" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/length_header"
                android:layout_width="wrap_content"
                android:text="@string/length"
                android:textAllCaps="true"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintLeft_toLeftOf="@id/length_header"
                app:layout_constraintTop_toBottomOf="@id/length_header"
                android:id="@+id/length"
                android:layout_width="wrap_content"
                tools:text="16"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>


            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/length_header"
                android:layout_marginStart="30dp"
                android:id="@+id/luhn_header"
                android:layout_width="wrap_content"
                android:text="@string/luhn"
                android:textAllCaps="true"
                android:layout_height="wrap_content"/>


            <LinearLayout
                app:layout_constraintLeft_toLeftOf="@id/luhn_header"
                app:layout_constraintTop_toBottomOf="@id/luhn_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/luhn_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:text="@string/yes"
                    app:layout_constraintLeft_toLeftOf="@id/type_header"
                    app:layout_constraintTop_toBottomOf="@id/type_header" />

                <TextView
                    android:id="@+id/luhn_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/darker_gray"
                    android:text=" / "
                    app:layout_constraintLeft_toRightOf="@id/debit"
                    app:layout_constraintTop_toTopOf="@id/debit"
                    app:layout_constraintBottom_toBottomOf="@id/debit"/>

                <TextView
                    android:id="@+id/luhn_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/no"
                    app:layout_constraintLeft_toRightOf="@id/type_divider"
                    app:layout_constraintTop_toTopOf="@id/type_divider"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container_country"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/container_prepaid"
        app:layout_constraintTop_toTopOf="@id/container_card_number"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/country_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/bank_container"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                tools:text="🇩🇰 Denmark" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:lines="2"
                tools:text="(latitude: 56, longitude: 10)" />
        </LinearLayout>



    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container_bank"
        android:layout_marginTop="45dp"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="@id/container_card_number"
        app:layout_constraintTop_toBottomOf="@id/container_card_number"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bank_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bank"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:textAllCaps="true" />


            <TextView
                android:id="@+id/full_name_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                tools:text="Jyske Bank, Hjørring"
                />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_light"
                android:text="www.jyskebank.dk" />

        <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:text="+4589893300" />



    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_digit_tve"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/container_bank"
        android:layout_width="match_parent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconContentDescription="clear text"
        style="@style/Widget.Design.TextInputLayout"
        app:helperTextEnabled="true"
        app:helperText="Enter the first digits of a card number (BIN/IIN)"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_digit_tv"
            android:layout_width="match_parent"
            android:gravity="center"
            android:inputType="number"
            android:textSize="24sp"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>